--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.15.6",
     "method-override": "^3.0.0",
-    "pg": "^7.7.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
+    "pg": "^7.8.0",
     "pg-hstore": "^2.3.2",
     "request": "^2.88.0",
     "sequelize": "^4.42.0"
