added recently played vehicles and "my career" routes

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ urlAccount = 'https://api-xbox-console.worldoftanks.com/wotx/account/list/?appli
 
 urlPlayer = 'https://api-xbox-console.worldoftanks.com/wotx/account/info/?application_id=1713b4e1f4383b7a11a4f24c86f8cefa&account_id='
 
+urlRecentVehicles = 'https://api-xbox-console.worldoftanks.com/wotx/tanks/stats/?application_id=1713b4e1f4383b7a11a4f24c86f8cefa&account_id='
+
 FB_APP_ID='327757971413262'
 
 FB_SECRET='5fb158a57aea9e098d48b1d3307ce584'
