--- a/config/config.json
+++ b/config/config.json
@@ -10,6 +10,6 @@
     "dialect": "postgres"
   },
   "production": {
-    "use_env_variable": "DATABSE_URL"
+    "use_env_variable": "DATABASE_URL"
   }
 }
